# android-opencv-assessment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/app/: JNIBridge.java  MainActivity.java
app/src/main/java/com/example/app/gl/: FullScreenQuad.java  MainRenderer.java  ShaderUtils.java
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: main.ts
